--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,10 @@ a {
   text-decoration: none;
 }
 
+body {
+  font-family: -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", HelveticaNeue, YuGothic, "Yu Gothic Medium", "Yu Gothic", Verdana, Meiryo, sans-serif;
+}
+
 .br-sp {
   display: none;
 }
@@ -85,14 +89,14 @@ a {
   display: none;
 }
 
-@media screen and (max-width: 1015px) {
+@media screen and (max-width: 1149px) {
   .br-tab {
     display: inline;
   }
 }
 
 .header {
-  background: rgba(255, 255, 255, 0);
+  background: #323232;
   height: 60px;
   position: relative;
   top: 0;
@@ -149,7 +153,7 @@ a {
   margin: 0 auto;
   max-width: 100%;
   padding: 0 40px;
-  width: 1016px;
+  width: 1150px;
 }
 
 @media screen and (max-width: 767px) {
@@ -159,7 +163,7 @@ a {
 }
 
 .mv {
-  background: linear-gradient(45deg, rgba(129, 234, 219, 0.9), #98e1fb, rgba(47, 135, 191, 0.9)), url("../img/dist/mv_bg.jpg") center center;
+  background: rgba(50, 50, 50, 0.3) center center;
   background-size: cover;
   height: calc(100vh - 160px);
   margin-top: -60px;
